Fix at long inventory name snapshot in title is not visible

--- a/app/assets/stylesheets/my_modules/repositories.scss
+++ b/app/assets/stylesheets/my_modules/repositories.scss
@@ -5,21 +5,9 @@
   @include font-h3;
   line-height: 22px;
   overflow: hidden;
-  padding-right: 55px;
   position: relative;
   text-overflow: ellipsis;
   white-space: nowrap;
-
-  &::after {
-    color: $color-alto;
-    content: '[' attr(data-rows-count) ']';
-    display: inline-block;
-    line-height: 22px;
-    padding-left: 5px;
-    position: absolute;
-    right: 0;
-    width: 55px;
-  }
 }
 
 .my-module-inventories {
@@ -131,6 +119,17 @@
 
       .assigned-repository-title {
         @include my-module-repository-title;
+        padding-right: 36px;
+
+        &::after {
+          color: $color-alto;
+          content: '[' attr(data-rows-count) ']';
+          display: inline-block;
+          line-height: 22px;
+          padding-right: 12px;
+          position: absolute;
+          right: 0;
+        }
       }
 
       .action-buttons {
@@ -218,11 +217,28 @@
           flex-grow: 1;
           max-width: calc(100% - 20px);
 
-          .repository-name {
+          .repository-name-container {
+            display: flex;
+          }
+
+          .repository-title {
             @include my-module-repository-title;
             @include font-h2;
-            display: inline-block;
-            width: 100%;
+          }
+
+          .repository-version {
+            @include font-h2;
+            flex-shrink: 0;
+            line-height: 22px;
+            padding-right: 10px;
+
+            &::after {
+              color: $color-alto;
+              content: '[' attr(data-rows-count) ']';
+              display: inline-block;
+              line-height: 22px;
+              padding-left: 5px;
+            }
           }
 
           .breadcrumbs {
